--- a/index.html
+++ b/index.html
@@ -2,66 +2,77 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+<link rel="stylesheet" href="style.css">
+<title>Document</title>
 </head>
 
 <body>
-    <div class="main">
-        <h1>Pruebas de programas</h1>
-        <img src="images/mono.jpg" />
-        <p>Las pruebas de software (en inglés software testing) son las investigaciones empíricas y técnicas cuyo
-            objetivo es proporcionar información objetiva e independiente sobre la calidad del producto a la parte
-            interesada o stakeholder. Es una actividad más en el proceso de control de calidad.</p>
+	<div class="main">
 
-        <p>Las pruebas son básicamente un conjunto de actividades dentro del desarrollo de software. Dependiendo del
-            tipo de pruebas, estas actividades podrán ser implementadas en cualquier momento de dicho proceso de
-            desarrollo. Existen distintos modelos de desarrollo de software, así como modelos de pruebas. A cada uno
-            corresponde un nivel distinto de involucramiento en las actividades de desarrollo.
-        </p>
-        <h2>Pruebas estaticas</h2>
-        <p>
-            Son el tipo de pruebas que se realizan sin ejecutar el código de la aplicación.
-        </p>
+		<h1>
+			<u>Pruebas de programas</u>
+		</h1>
+		<img src="images/mono.jpg" />
+		<p>
+			Las pruebas de software (en inglés software testing) son <span
+				class="important">las investigaciones empíricas y técnicas
+				cuyo objetivo es proporcionar información objetiva e independiente
+				sobre la calidad del producto a la parte interesada o stakeholder.<span>
+					Es una actividad más en el proceso de control de calidad.
+		</p>
 
-        <p> Puede referirse a la revisión de documentos, ya que no se hace una ejecución de código. Esto se debe a que
-            se pueden realizar "pruebas de escritorio" con el objetivo de seguir los flujos de la aplicación.
-        </p>
-        <h2>Pruebas dinamicas</h2>
-        <p>Todas aquellas pruebas que para su ejecución requieren la ejecución de la aplicación.</p>
-        <p>Las pruebas dinámicas permiten el uso de técnicas de caja negra y caja blanca con mayor amplitud. Debido a la
-            naturaleza dinámica de la ejecución de pruebas es posible medir con mayor precisión el comportamiento de la
-            aplicación desarrollada. </p>
-        <h2>Verificacion vs validación</h2>
-        <h3>Verificación</h3>
-        <p>Se trata de comprobar que el software funciona correctamente. Que se esta desarrollando el software
-            correctamente.</p>
-        <h4>Estrategia de prueba</h4>
-        <ul>
-            <li>Pruebas unitarias</li>
-            <li>Pruebas de integracion</li>
-            <li>Pruebas de validacion</li>
-            <li>Pruebas de sistema</li>
-        </ul>
-        <h3>Validacion</h3>
-        <p>Es la revisión que verifica que el sistema de software producido que cumple con las especificaciones y que
-            logra su cometido. Se trata de evaluar el sistema o parte de este durante o al final del desarrollo para
-            determinar si satisface los requisitos iniciales. La pregunta a realizarse es: ¿Es esto lo que el cliente
+		<p>
+			Las pruebas son básicamente <span class="important">un
+				conjunto de actividades dentro del desarrollo de software.</span>
+			Dependiendo del tipo de pruebas, estas actividades podrán ser
+			implementadas en cualquier momento de dicho proceso de desarrollo.
+			Existen distintos modelos de desarrollo de software, así como modelos
+			de pruebas. A cada uno corresponde un nivel distinto de
+			involucramiento en las actividades de desarrollo.
+		</p>
+		<br>
+		<h2>Pruebas estaticas</h2>
+		<p>
+			<span class="important">Son el tipo de pruebas que se realizan
+				sin ejecutar el código de la aplicación.</span>
+		</p>
+
+		<p>Puede referirse a la revisión de documentos, ya que no se hace
+			una ejecución de código. Esto se debe a que se pueden realizar
+			"pruebas de escritorio" con el objetivo de seguir los flujos de la
+			aplicación.</p>
+		<h2>Pruebas dinamicas</h2>
+		<p>
+			<span class="important">Todas aquellas pruebas que para su
+				ejecución requieren la ejecución de la aplicación.</span>
+		</p>
+		<p>Las pruebas dinámicas permiten el uso de técnicas de caja negra
+			y caja blanca con mayor amplitud. Debido a la naturaleza dinámica de
+			la ejecución de pruebas es posible medir con mayor precisión el
+			comportamiento de la aplicación desarrollada.</p>
+		<h2>Verificacion vs validación</h2>
+		<h3>Verificación</h3>
+		<p>
+			<span class="important">Se trata de comprobar que el software
+				funciona correctamente.</span> Que se esta desarrollando el software
+			correctamente.
+		</p>
+		<h4>Estrategia de prueba</h4>
+		<ul>
+			<li>Pruebas unitarias</li>
+			<li>Pruebas de integracion</li>
+			<li>Pruebas de validacion</li>
+			<li>Pruebas de sistema</li>
+		</ul>
+		<h3>Validacion</h3>
+        <p><span class="important">Es la revisión que verifica que el sistema de software producido que cumple con las especificaciones y que
+            logra su cometido.</span> Se trata de evaluar el sistema o parte de este durante o al final del desarrollo para
+			determinar si satisface los requisitos iniciales. La pregunta a realizarse es: ¿Es esto lo que el cliente
             quiere?. </p>
 
-
-
-
-
-
-
-
-
-
-    </div>
 </body>
 
 </html>
